Use Files#writeString instead writing bytes